# pekka-agent

./: .gitignore  Cargo.toml  DEPLOY.md  mock-server.js  nixpacks.toml  package-lock.json  package.json  playwright.config.js  railway.toml
config/: default.toml
playwright-report/: index.html
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/agent/: actor.rs  events.rs  messages.rs  mod.rs  parallel.rs  react_loop.rs
src/llm/: mod.rs  openai.rs  types.rs
src/orchestrator/: actor.rs  messages.rs  mod.rs
src/pekka/: mod.rs  runtime.rs  supervisor.rs
src/tools/: http_tool.rs  mod.rs  registry.rs
src/tools/builtin/: calculator.rs  echo.rs  mod.rs  perplexity.rs
src/web/: exporter.rs  mod.rs  ui.html
tests/: api.spec.js  ui.spec.js
