[package]
name = "pekka-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Interactive LLM chatbot framework on top of the Pekka actor system with OpenTelemetry tracing"

[[bin]]
name = "chat"
path = "src/main.rs"

[lib]
name = "pekka_llm"
path = "src/lib.rs"

[features]
default = []
otlp = ["dep:opentelemetry-otlp"]

[dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7" }
futures     = "0.3"
async-trait = "0.1"

# HTTP client for LLM and HTTP tools
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Concurrent data structures
dashmap = "6"

# Error handling
thiserror = "1"
anyhow    = "1"

# IDs
uuid = { version = "1", features = ["v4"] }

# Tracing + OpenTelemetry
tracing                        = "0.1"
tracing-subscriber             = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry          = "0.27"
opentelemetry                  = { version = "0.26", features = ["trace"] }
opentelemetry_sdk              = { version = "0.26", features = ["trace", "rt-tokio"] }
opentelemetry-stdout           = { version = "0.26", features = ["trace"] }
opentelemetry-semantic-conventions = "0.26"

# Optional OTLP exporter (enable with --features otlp)
opentelemetry-otlp = { version = "0.26", features = ["trace", "grpc-tonic"], optional = true }

# Web UI
axum        = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http  = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
tokio-test = "0.4"
